--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,3 +8,6 @@
 @import "blocks/main-nav.less";
 @import "blocks/intro.less";
 @import "blocks/layer.less";
+@import "blocks/wrapper.less";
+@import "blocks/portfolio.less";
+@import "blocks/social.less";
