--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,7 +1,10 @@
 // colors
 @white: #ffffff;
 @purple: #5c5766;
+@light-purple: #615474;
 @dark-purple: #524664;
+@yellow: #ffd670;
+@light-yellow: #fff0ca;
 @dark-blue: #283645;
 @gray: #f2f2f2;
 @dark-gray: #bec2c7;
