--- a/source/less/base.less
+++ b/source/less/base.less
@@ -5,7 +5,7 @@ body {
   font-size: @font-size;
   font-weight: 400;
   line-height: 24 / 14;
-  color: @dark-blue;
+  color: @white;
   background: @white;
 }
 a {
