--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -1,9 +1,7 @@
 .container {
-  outline: 2px solid red;
+  // outline: 2px solid red;
   .clearfix();
   position: relative;
-  padding-left: 20px;
-  padding-right: 20px;
   margin: 0 auto;
   text-align: center;
   @media @mobile {
@@ -16,7 +14,5 @@
   }
   @media @desktop {
     min-width: 960px;
-    padding-left: 10px;
-    padding-right: 10px;
   }
 }
