--- a/source/less/blocks/layer.less
+++ b/source/less/blocks/layer.less
@@ -1,6 +1,65 @@
 .layer {
+  height: 100vh;
   background: @dark-purple;
-  &--yellow {
-    
+  .clearfix();
+  &__title {
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 30 / 18;
+    color: @white;
+    // text-transform: uppercase;
+    &--main {
+      padding-top: 30px;
+      font-size: 35px;
+      line-height: 35 / 35;
+      &::after {
+        content: '';
+        display: block;
+        margin: 0 auto;
+        margin-top: 10px;
+        width: 6.5%;
+        height: 3px;
+        background: @white;
+      }
+    }
   }
+  &__box {
+    .clearfix();
+    &--one_third_width {
+      width: 100% / 3;
+      text-align: left;
+    }
+    &--rombs {
+      display: flex;
+      padding-top: 100px;
+      padding-bottom: 100px;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+  }
+  &__text {
+    font-size: 18px;
+    line-height: 30 / 18;
+    color: @white;
+    &--underline {
+      text-decoration: underline;
+    }
+    &--decor {
+      display: block;
+      width: 75%;
+      background: @yellow;
+    }
+  }
+  &__wrapper {
+    width: 100%;
+    background: @light-purple;
+
+  }
+  &--yellow {
+    height: 100%;
+    background: @yellow;
+  }
+
 }
