--- a/source/less/base.less
+++ b/source/less/base.less
@@ -2,14 +2,15 @@ body {
   position: relative;
   margin: 0 auto;
   font-family: @font-family;
-  font-size: @font-size;
+  font-size: @font-size--h1;
   font-weight: 400;
   line-height: 24 / 14;
   color: @white;
   background: @white;
+  @media @mobile {
+    font-size: @font-size
+  }
 }
 a {
   text-decoration: none;
-  color: @dark-blue;
-  font-size: @font-size + 4px;
 }
