--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -12,6 +12,12 @@
     line-height: 1;
     color: @white;
     // text-transform: uppercase;
+    @media @mobile {
+      margin-top: 50px;
+    }
+    @media @desktop {
+      margin-top: 0;
+    }
   }
   &__text {
     font-size: 22px;
@@ -19,16 +25,29 @@
     &--main {
       padding: 0;
       margin: 0;
-      margin-top: 10px;
-      margin-bottom: 30px;
-      font-size: 66px;
       line-height: 1;
       font-weight: normal;
       color: @white;
+      @media @mobile {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        font-size: 40px;
+      }
+      @media @desktop {
+        margin-top: 10px;
+        margin-bottom: 30px;
+        font-size: 66px;
+      }
+
     }
     &--decor {
-      font-size: 66px;
-      font-weight: 700;
+      @media @mobile {
+        font-size: 40px;
+      }
+      @media @desktop {
+        font-size: 66px;
+        font-weight: 700;
+      }
     }
     &--description {
       color: @yellow;
