--- a/source/less/blocks/layer.less
+++ b/source/less/blocks/layer.less
@@ -10,25 +10,41 @@
     color: @white;
     // text-transform: uppercase;
     &--main {
-      padding-top: 30px;
-      font-size: 35px;
-      line-height: 35 / 35;
+      @media @mobile {
+        padding-top: 10px;
+        font-size: @font-size--h1;
+      }
+      @media @desktop {
+        padding-top: 30px;
+        font-size: 35px;
+        line-height: 35 / 35;
+      }
       &::after {
-        content: '';
-        display: block;
-        margin: 0 auto;
-        margin-top: 10px;
-        width: 6.5%;
-        height: 3px;
-        background: @white;
+        @media @mobile {
+          content: '';
+          display: block;
+          margin: 0 auto;
+          margin-top: 0px;
+          width: 7%;
+          height: 3px;
+          background: @white;
+        }
+        @media @desktop {
+          margin-top: 10px;
+        }
       }
     }
   }
   &__box {
     .clearfix();
     &--one_third_width {
-      width: 100% / 3;
-      text-align: left;
+      @media @mobile {
+        width: 100%;
+      }
+      @media @desktop {
+        width: 100% / 3;
+        text-align: left;
+      }
     }
     &--rombs {
       display: flex;
@@ -50,6 +66,14 @@
       display: block;
       width: 75%;
       background: @yellow;
+    }
+    &--desktop {
+      @media @mobile {
+        display: none;
+      }
+      @media @desktop {
+        display: inline;
+      }
     }
   }
   &__wrapper {
