--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -19,7 +19,7 @@
 @desktop: ~'(min-width:960px)';
 
 // font styles
-@font-family: 'Marck Script', cursive;;
+@font-family: 'Marck Script', cursive;
 @font-size: 15px;
 @font-size--h1: 24px;
 @font-size--h2: @font-size;
