--- a/source/less/blocks/layer.less
+++ b/source/less/blocks/layer.less
@@ -47,12 +47,21 @@
       }
     }
     &--rombs {
-      display: flex;
-      padding-top: 100px;
-      padding-bottom: 100px;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: flex-start;
+      @media @mobile {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding: 0;
+      }
+      @media @desktop {
+        display: flex;
+        padding-top: 100px;
+        padding-bottom: 100px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+      }
     }
   }
   &__text {
