--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -5,7 +5,7 @@
   margin: 0 auto;
   text-align: center;
   @media @mobile {
-    min-width: 320px;
+    // min-width: 320px;
     max-width: 659px;
   }
   @media @tablet {
