--- a/source/less/blocks/layer.less
+++ b/source/less/blocks/layer.less
@@ -40,6 +40,7 @@
     &--one_third_width {
       @media @mobile {
         width: 100%;
+        text-align: left;
       }
       @media @desktop {
         width: 100% / 3;
